welcome.lessons.welcome.array.array667.Array667.scala.error
array667:2: error: ';' expected but ',' found.
  for (i<-0 to nums.length-2) {if (nums(i) == 6 && nums(i+1) ==6) {compteur66 = compteur66+1}; if (nums(i) == 6 && nums(i+1) ==7) {compteur67 = compteur67 +1}}; return compteur66,compteur67}
                                                                                                                                                                                  ^